# dwarf2cpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  pyproject.toml
.claude/skills/release/: SKILL.md
.conan2/: remotes.json
.github/workflows/: build.yml  release.yml
recipes/: README.md
recipes/llvm-core/: config.yml
recipes/llvm-core/all/: conandata.yml  conanfile.py
recipes/llvm-core/all/patches/22x/: 0000-cmake-dependencies.patch
recipes/llvm-core/all/test_package/: conanfile.py
src/dwarf2cpp/: _dwarf.cpp  models.py  visitor.py
src/dwarf2cpp/templates/: typedef.jinja
