[project]
name = "dwarf2cpp"
version = "0.1.0"
description = "Generate C++ headers from DWARF Debugging Information Format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click", "jinja2", "lazy_loader", "tqdm"]

[project.scripts]
dwarf2cpp = "dwarf2cpp.cli:main"

[build-system]
requires = ["conan-py-build"]
build-backend = "conan_py_build.build"

[tool.conan-py-build.wheel]
packages = ["src/dwarf2cpp"]
exclude = ["*.cpp", "*.h"]

[tool.conan-py-build]
extra-arguments = ["-s=compiler.cppstd=17"]

[tool.cibuildwheel]
build = "cp312-*"
skip = "*-win32 *-manylinux_i686"
environment = { WHEEL_ABI = "abi3", WHEEL_PYVER = "cp312" }

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
